--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
   --color-accent: #ff3400;
   --color-heading: #1b0760;
   --color-body: #918ca4;
+  --color-border: #ccc;
+  --border-radius: 30px;
 }
 *,
 *::after,
@@ -86,7 +88,7 @@ where the content itself is defined*/
 
 .badge {
   padding: 0.5rem 2rem;
-  border-radius: 20px;
+  border-radius: var(--border-radius);
   font-weight: 600;
   white-space: nowrap;
   font-size: 2rem;
@@ -161,7 +163,7 @@ from the SKINS which dynamically change depending on the use case and interactio
 of the button */
 
 .btn {
-  border-radius: 30px;
+  border-radius: var(--border-radius);
   border: none;
   cursor: pointer;
   font-size: 1.8rem;
@@ -209,6 +211,32 @@ which they are placed*/
 
 @media screen and (min-width: 1024px) {
   .btn {
+    font-size: 1.5rem;
+  }
+}
+
+/* Inputs */
+
+.input {
+  border-radius: 30px;
+  border: 1px solid var(--color-border);
+  color: var(--color-heading);
+  margin: 3rem;
+  outline: 0;
+  padding: 1.5rem 3rem;
+  font-size: 2rem;
+}
+.input--group {
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  display: flex;
+}
+.input--group .input {
+  border: 0;
+  flex-grow: 1;
+}
+@media screen and (min-width: 1024px) {
+  .input {
     font-size: 1.5rem;
   }
 }
