--- a/css/styles.css
+++ b/css/styles.css
@@ -101,8 +101,12 @@ where the content itself is defined*/
   background: var(--color-secondary);
   color: #fff;
 }
+.card--secondary .badge--secondary {
+  background: #02cdf1;
+}
 .badge--small {
   font-size: 1.6rem;
+  padding: 0.5rem 1.5rem;
 }
 @media screen and (min-width: 1024px) {
   .badge {
@@ -199,6 +203,12 @@ of the button */
   background: #ec3000;
 }
 
+.btn--outline {
+  background: none;
+  border: 1px solid var(--color-heading);
+  color: var(--color-heading);
+}
+
 /*note that this structure/skin combination has been defined for
 inline buttons. for block buttons, different structures are required,
 as these buttons will be required to fill the container in 
@@ -241,5 +251,77 @@ which they are placed*/
 @media screen and (min-width: 1024px) {
   .input {
     font-size: 1.5rem;
+  }
+}
+/* Cards */
+
+.card {
+  border-radius: 7px;
+  box-shadow: 0 0 20px 10px #f3f3f3;
+  overflow: hidden;
+  /*
+  padding: 1rem;
+  */
+}
+
+.card__header,
+.card__body {
+  padding: 2rem 3rem;
+}
+
+.card--primary .card__header {
+  background: var(--color-primary);
+  color: white;
+}
+.card--secondary .card__header {
+  background: var(--color-secondary);
+  color: white;
+}
+/* Plan Construct */
+.plan__name {
+  color: white;
+  margin: 0;
+  font-weight: 500;
+  font-size: 2.4rem;
+}
+.plan__price {
+  font-size: 6rem;
+}
+.plan__billing {
+  font-size: 2.4rem;
+  font-weight: 300;
+  opacity: 0.8;
+  margin-right: 1rem;
+}
+.plan__description {
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+  display: block;
+}
+.plan .list__item {
+  margin-bottom: 2rem;
+  letter-spacing: 1px;
+}
+.plan--popular .card__header {
+  position: relative;
+}
+.plan--popular .card__header::before {
+  content: url(/images/popular.svg);
+  width: 40px;
+  display: inline-block;
+  position: absolute;
+  top: -6px;
+  right: 5%;
+}
+@media screen and (min-width: 1024px) {
+  .plan__name {
+    font-size: 1.4rem;
+  }
+  .plan__price {
+    font-size: 5rem;
+  }
+  .plan__billing {
+    font-size: 1.6rem;
   }
 }
