--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --color-body: #918ca4;
   --color-border: #ccc;
   --border-radius: 30px;
+  --color-body-darker: #5c5577;
 }
 *,
 *::after,
@@ -337,4 +338,43 @@ which they are placed*/
 }
 .media__image {
   margin-top: 0.5rem;
+}
+/* Quotes */
+
+.quote {
+  font-size: 3rem;
+  font-style: italic;
+  color: var(--color-body-darker);
+  line-height: 1.3;
+}
+.quote__text::before {
+  content: open-quote;
+}
+.quote__text::after {
+  content: close-quote;
+}
+.quote__footer .media {
+  margin: 4rem;
+}
+.quote__footer .media__title {
+  font-weight: 300;
+  font-size: 3rem;
+  letter-spacing: 1.5px;
+  margin-bottom: none;
+}
+.media__description {
+  opacity: 0.4;
+  margin: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .quote {
+    font-size: 2rem;
+  }
+  .media__title {
+    font-size: 2.4rem;
+  }
+  .media__description {
+    font-size: 1.6rem;
+  }
 }
