--- a/css/styles.css
+++ b/css/styles.css
@@ -378,3 +378,15 @@ which they are placed*/
     font-size: 1.6rem;
   }
 }
+/* Grids */
+.grid {
+  display: grid;
+}
+@media screen and (min-width: 768px) {
+  .grid--1x2 {
+    grid-template-columns: 1fr 1fr;
+  }
+  .grid--1x3 {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
