--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,13 @@ where the content itself is defined*/
 .icon--primary {
   fill: var(--color-primary);
 }
+.icon--white {
+  fill: white;
+}
+.icon--small {
+  height: 30px;
+  width: 30px;
+}
 .icon-container {
   background: #f3f9fa;
   width: 64px;
@@ -159,6 +166,18 @@ where the content itself is defined*/
   display: inline-flex;
   justify-content: center;
   align-items: center;
+}
+.testimonial .icon-container {
+  background: var(--color-accent);
+  width: 64px;
+  height: 64px;
+  border-radius: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+.icon-container--accent {
+  background: var(--color-accent);
 }
 
 /* Buttons */
@@ -388,5 +407,50 @@ which they are placed*/
   }
   .grid--1x3 {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+/* Testimonials */
+/*
+.testimonial {
+  padding: 3rem;
+}
+.testimonial__image {
+  position: relative;
+}
+.testimonial__image > .img {
+  width: 100%;
+}
+.testimonial__image > .icon-container {
+  position: absolute;
+  top: 3rem;
+  right: -32px;
+}
+.testimonial__block {
+  width: 100%;
+  height: 400px;
+}
+*/
+.testimonial {
+  padding: 3rem;
+}
+.testimonial__image {
+  position: relative;
+  width: 100%;
+}
+.testimonial__image > img {
+  width: 100%;
+}
+.testimonial__image .icon-container {
+  position: absolute;
+  top: 3rem;
+  right: -32px;
+}
+@media screen and (min-width: 768px) {
+  .testimonial .quote,
+  .testimonial .quote__author {
+    font-size: 2.4rem;
+  }
+  .testimonial .quote {
+    margin-left: 6rem;
   }
 }
