--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ where the content itself is defined*/
   fill: var(--color-primary);
 }
 .icon--white {
-  fill: white;
+  fill: #f3f3f3;
 }
 .icon--small {
   height: 30px;
@@ -522,6 +522,7 @@ Here is my attempt:
 .callout__content {
   text-align: center;
 }
+
 @media screen and (min-width: 768px) {
   .callout .grid--1x2 {
     grid-template-columns: 1fr auto;
@@ -532,4 +533,28 @@ Here is my attempt:
   .callout .btn {
     justify-self: start;
   }
+}
+
+/* Collapsibles */
+
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
+}
+.collapsible__heading {
+  margin-top: 0;
+  font-size: 3rem;
+}
+.collapsible__chevron {
+  transform: rotate(90deg);
+}
+.collapsible__content {
+  display: none;
+}
+
+.collapsible--expanded .collapsible__chevron {
+  transform: rotate(0);
+}
+.collapsible--expanded .collapsible__content {
+  display: block;
 }
