--- a/css/styles.css
+++ b/css/styles.css
@@ -547,14 +547,51 @@ Here is my attempt:
 }
 .collapsible__chevron {
   transform: rotate(90deg);
+  transition: transform 0.3s;
 }
 .collapsible__content {
-  display: none;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3s;
+  opacity: 0;
 }
 
 .collapsible--expanded .collapsible__chevron {
   transform: rotate(0);
 }
 .collapsible--expanded .collapsible__content {
-  display: block;
+  max-height: 100vh;
+  opacity: 1;
+}
+
+/* Block */
+
+.block {
+  --padding-vertical: 6rem;
+  padding: var(--padding-vertical) 2rem;
+}
+.block__heading {
+  margin-top: 0;
+}
+.block--dark {
+  background: #000000;
+  color: #7b858b;
+}
+.block--dark .block__heading {
+  color: #fff;
+}
+.block--skewed-right {
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(100% 100%, 100% 0%, 0% 0%, 0% 90%);
+}
+.block--skewed-left {
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+}
+.block__header {
+  text-align: center;
+}
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
 }
