--- a/css/styles.css
+++ b/css/styles.css
@@ -329,6 +329,11 @@ which they are placed*/
   color: white;
 }
 /* Plan Construct */
+
+.plan {
+  box-shadow: 0 0 30px 5px #e6ebee;
+  border-radius: 7px;
+}
 .plan__name {
   color: white;
   margin: 0;
@@ -354,6 +359,9 @@ which they are placed*/
   margin-bottom: 2rem;
   letter-spacing: 1px;
 }
+.plan--popular {
+  transform: scale(1.05);
+}
 .plan--popular .card__header {
   position: relative;
 }
@@ -362,8 +370,14 @@ which they are placed*/
   width: 40px;
   display: inline-block;
   position: absolute;
-  top: -6px;
+  top: -5px;
   right: 5%;
+}
+.plan:hover {
+  transform: scale(1.05);
+}
+.plan--popular:hover {
+  transform: scale(1.1);
 }
 @media screen and (min-width: 1024px) {
   .plan__name {
@@ -795,4 +809,18 @@ here's my attempt;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     grid-template-rows: 6rem;
   }
+}
+
+/* Cards */
+
+.block--plans .grid {
+  grid-gap: 4rem;
+}
+.block--plans .card,
+.block--plans .plan {
+  max-width: 600px;
+  margin: 0 auto;
+}
+.plan {
+  transition: transform 0.2s ease-out;
 }
