--- a/css/styles.css
+++ b/css/styles.css
@@ -446,6 +446,7 @@ which they are placed*/
 .grid {
   display: grid;
 }
+
 @media screen and (min-width: 1140px) {
   .grid--1x2 {
     grid-template-columns: 1fr 1fr;
@@ -455,6 +456,10 @@ which they are placed*/
   }
   .grid--1x2i {
     grid-template-columns: 1fr 250px;
+  }
+  .grid--footer {
+    grid-template-columns: 30% 1fr 1fr 1fr 1fr;
+    grid-gap: 1rem;
   }
 }
 /* Testimonials */
@@ -545,7 +550,17 @@ Here is my attempt:
 .callout {
   padding: 4rem;
   border-radius: 5px;
+  width: 80%;
+  max-width: 800px;
+  min-height: 200px;
+
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  top: -300px;
+  transform: translate(-50%, -50%);
 }
+
 .callout--primary {
   background: var(--color-primary);
   color: #fff;
@@ -581,14 +596,17 @@ Here is my attempt:
   display: flex;
   justify-content: space-between;
 }
+
 .collapsible__heading {
   margin-top: 0;
   font-size: 3rem;
 }
+
 .collapsible__chevron {
   transform: rotate(90deg);
   transition: transform 0.3s;
 }
+
 .collapsible__content {
   max-height: 0;
   overflow: hidden;
@@ -753,10 +771,10 @@ the <header> element, which automatically centers the content.
   clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
 }
 .hero__content {
-  margin-left: 5rem;
+  margin-left: 0rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1140px) {
   .hero {
     padding-top: 0;
   }
@@ -860,7 +878,7 @@ a media query for larger screens*/
 }
 .features--article {
   gap: 4rem 2rem;
-  margin: 12rem 0;
+  margin: 3rem 0;
 }
 
 .features__image {
@@ -870,9 +888,13 @@ a media query for larger screens*/
   padding: 3rem 3rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1140px) {
   .features--article:nth-of-type(even) .feature__content {
     order: 2;
+  }
+  .features--article {
+    gap: 4rem 2rem;
+    margin: 0rem 0rem;
   }
 }
 
@@ -896,4 +918,117 @@ a media query for larger screens*/
 .grid__showcase div {
   max-width: 500px;
   margin: 0px auto;
+}
+
+/* Footer 
+
+my code: 
+
+.footer__heading {
+  color: #fff;
+  text-transform: uppercase;
+}
+.grid--footer:not(a) {
+  align-items: center;
+  justify-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.grid--footer h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 1.15;
+}
+.grid--footer li {
+  color: #f3f3f3;
+}
+.footer--logo {
+  justify-self: center;
+}
+ */
+
+.footer {
+  background: #232323;
+  padding-top: 300px;
+  margin-top: 250px;
+}
+
+.footer__sections {
+  position: relative;
+}
+
+.footer h2 {
+  color: #fff;
+  line-height: 1.15;
+}
+
+.footer__section {
+  padding: 2rem;
+  border-bottom: 1px solid #393939;
+}
+.footer__section .list {
+  margin-top: 0;
+}
+.footer__heading {
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.footer__brand {
+  margin-top: 5rem;
+  text-align: center;
+  justify-items: center;
+}
+.footer__copyright {
+  font-size: 2.1rem;
+  color: #fff;
+  opacity: 0.3;
+}
+.footer .list {
+  color: #f3f3f3;
+  opacity: 0.3;
+  transition: color 0.3s;
+  cursor: pointer;
+}
+.footer__sections {
+  color: #fff;
+}
+@media screen and (min-width: 1140px) {
+  .footer__sections {
+    grid-template-columns: 30rem 1fr 1fr 1fr 1fr;
+  }
+  .footer .icon {
+    display: hidden;
+  }
+  .footer .collapsible__content {
+    opacity: 1;
+    max-height: 100%;
+  }
+  .footer .collapsible__chevron {
+    display: none;
+  }
+  .footer__brand {
+    order: -1;
+    margin-top: 1rem;
+  }
+  .footer__copyright {
+    font-size: 1.5rem;
+  }
+  .footer__section {
+    border: none;
+  }
+  .footer li:hover {
+    color: #fff;
+  }
+  .footer__heading {
+    font-size: 1.6rem;
+  }
+}
+
+/* In this section, I couldn't get the <hover> effect to operate 
+on the list items */
+
+/* Modifications */
+
+.hero h1 {
+  margin-top: 5rem;
 }
